docs/4.20/hosted_control_planes/hcp-networking.md
Ensure optimal performance with hosted control planes by configuring network settings. Those settings include internal subnets and proxy support for control-plane workloads, compute nodes, management clusters, and hosted clusters.

# Network isolation for hosted clusters

To provide distinct, secure environments for multiple hosted clusters that share the same management cluster, you can configure hosted clusters with specific network and virtual machine (VM) isolation levels.

For hosted clusters, network isolation levels include container-based isolation, VM-based isolation, and physical isolation:

Container-based isolation
With container-based isolation, you use shared compute nodes, and isolation is enforced by policy, namespaces, and control group or SELinux boundaries. Control-plane components run as pods on the management cluster, isolated mainly by Kubernetes or Linux mechanisms, not by giving each hosted cluster its own VM or server. Each control plane runs in a dedicated namespace, with default-deny networking and a network policy that allows only defined traffic. Pods use the restricted security context constraint, with unique identifiers (UIDs) scoped for each namespace.

VM-based isolation
With VM-based isolation, you run hosted control plane pods inside VMs; for example, on OpenShift Virtualization. This type of isolation is useful if you require VM-based isolation over container-based isolation for a multitenant management cluster. You add a hypervisor boundary between hosted clusters that share a management cluster. Control plane pods are pinned to dedicated VMs.

Physical isolation
With physical isolation, you follow a "shared-nothing" approach, where each control plane has its own dedicated node. Nodes for a specific hosted cluster are tainted and labeled with a specific `hypershift.openshift.io/hosted-cluster` value. Security involves the use of a network policy and physical network access control lists (ACLs) across hosted clusters.

For more information, see "Control plane isolation" and "Distributing hosted cluster workloads".

- [Control plane isolation](../hosted_control_planes/hcp-networking.xml#hcp-isolation_hcp-networking)

- [Node labeling for hosted control planes](../hosted_control_planes/hcp-prepare/hcp-distribute-workloads.xml#hcp-node-labeling_hcp-distribute-workloads)

## Control plane isolation

You can configure hosted control planes to isolate network traffic or control plane pods.

Each hosted control plane is assigned to run in a dedicated Kubernetes namespace. By default, the Kubernetes namespace denies all network traffic.

The following network traffic is allowed through the network policy that is enforced by the Kubernetes Container Network Interface (CNI):

- Ingress pod-to-pod communication in the same namespace (intra-tenant)

- Ingress on port 6443 to the hosted `kube-apiserver` pod for the tenant

- Metric scraping from the management cluster Kubernetes namespace with the `network.openshift.io/policy-group: monitoring` label is allowed for monitoring

### Control plane pod isolation

In addition to network policies, each hosted control plane pod is run with the `restricted` security context constraint. This policy denies access to all host features and requires pods to be run with a unique identifier (UID) and with SELinux context that is allocated uniquely to each namespace that hosts a customer control plane.

The policy ensures the following constraints:

- Pods cannot run as privileged.

- Pods cannot mount host directory volumes.

- Pods must run as a user in a pre-allocated range of UIDs.

- Pods must run with a pre-allocated Multi-Category Security (MCS) label.

- Pods cannot access the host network namespace.

- Pods cannot expose host network ports.

- Pods cannot access the host PID namespace.

- By default, pods drop the following Linux capabilities: `KILL`, `MKNOD`, `SETUID`, and `SETGID`.

The management components, such as `kubelet` and `crio`, on each management cluster worker node are protected by an SELinux label that is not accessible to the SELinux context for pods that support hosted control planes.

The following SELinux labels are used for key processes and sockets:

`kubelet`
`system_u:system_r:unconfined_service_t:s0`

`crio`
`system_u:system_r:container_runtime_t:s0`

`crio.sock`
`system_u:object_r:container_var_run_t:s0`

`<example user container processes>`
`system_u:system_r:container_t:s0:c14,c24`

# Ingress and egress requirements for hosted control planes

Specific network ports must be open for communication between the management cluster, the hosted control planes components, and the compute nodes. The ports are categorized into ingress ports, which involve incoming traffic to hosted control planes and egress ports, which involve outgoing traffic from hosted control planes.

## Ingress requirements for hosted control planes

Ingress ports involve incoming traffic to hosted control planes. Ensure the correct ports are open for communication between the management cluster, the hosted control planes components, and the compute nodes.

The following table details the ports for incoming traffic to hosted control planes across all platforms:

| Port   | Protocol | Service               | Description                                                                                             | Code reference                                         |
|--------|----------|-----------------------|---------------------------------------------------------------------------------------------------------|--------------------------------------------------------|
| `6443` | TCP      | Kubernetes API server | Primary API server port for `kubectl` and cluster communication                                         | `support/config/constants.go:35` - `KASSVCPort = 6443` |
| `9090` | TCP      | Ignition server       | Port from compute nodes during the bootstrap process, `NodePort` or `Route` service publishing strategy | \-                                                     |

Common ingress ports

The service publishing strategy determines additional ports. The `Ignition Proxy` and `Konnectivity` services are exposed through one of the following service publishing strategies:

`Route`
This setting is the default on OpenShift Container Platform. Traffic flows through the OpenShift router on port 443. No additional firewall rules are needed beyond standard HTTPS.

`NodePort`
Direct access is required to port 8091 (Konnectivity) and port 8443 (Ignition Proxy).

`LoadBalancer`
Direct access is required to port 8091 (Konnectivity) through the cloud load balancer.

The following table details the ingress port configurations that are specific to each platform:

| Platform                              | Port   | Service                 | Description                                                                 | Code reference                                                                                   |
|---------------------------------------|--------|-------------------------|-----------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------|
| Agent                                 | `8443` | Ignition Proxy          | HTTPS proxy for ignition content delivery (`NodePort` publishing)           | `hypershift-operator/controllers/hostedcluster/network_policies.go:390`                          |
| Agent                                 | `8081` | Agent CAPI health probe | Health check endpoint for Agent platform CAPI provider                      | `hypershift-operator/controllers/hostedcluster/internal/platform/agent.go:96,105,115`            |
| Agent                                 | `8080` | Agent CAPI metrics      | Metrics endpoint for Agent platform CAPI provider (binds to localhost only) | `hypershift-operator/controllers/hostedcluster/internal/platform/agent/agent.go:97`              |
| AWS                                   | `9440` | CAPI health check       | Health and readiness probe endpoint for AWS CAPI provider                   | `hypershift-operator/controllers/hostedcluster/internal/platform/aws/aws.go:222-223`             |
| Bare metal without the Agent platform | `8443` | Ignition Proxy          | HTTPS proxy for ignition content delivery (`NodePort` publishing)           | \-                                                                                               |
| KubeVirt                              | `9440` | CAPI health check       | Health and readiness probe endpoint                                         | `hypershift-operator/controllers/hostedcluster/internal/platform/kubevirt/kubevirt.go:140`       |
| RHOSP (Technology Preview)            | `9440` | CAPI health check       | Health and readiness probe endpoint                                         | `hypershift-operator/controllers/hostedcluster/internal/platform/openstack/openstack.go:238`     |
| RHOSP (Technology Preview)            | `8081` | ORC health check        | Health and readiness probe endpoint for OpenStack Resource Controller       | `hypershift-operator/controllers/hostedcluster/internal/platform/openstack/openstack.go:294,311` |

Platform-specific ingress port configurations

The following table details the ingress port configurations for private clusters, such as those on AWS:

| Port   | Service              | Description                              | Code reference                                                          |
|--------|----------------------|------------------------------------------|-------------------------------------------------------------------------|
| `8080` | Private router HTTP  | HTTP traffic through the private router  | `hypershift-operator/controllers/hostedcluster/network_policies.go:244` |
| `8443` | Private router HTTPS | HTTPS traffic through the private router | `hypershift-operator/controllers/hostedcluster/network_policies.go:245` |

Ingress port configurations for private clusters

## Egress requirements for hosted control planes

Egress ports involve outgoing traffic from hosted control planes. Ensure the correct ports are open for communication between the management cluster, the hosted control planes components, and the compute nodes.

The following table details the ports that must be accessible for outgoing traffic from hosted control planes, across all platforms.

| Port   | Protocol    | Service               | Purpose                                                 |
|--------|-------------|-----------------------|---------------------------------------------------------|
| `443`  | TCP         | HTTPS                 | OLM images, `Ignition` content, external HTTPS services |
| `6443` | TCP         | Kubernetes API server | Communication with management cluster API               |
| `53`   | TCP and UDP | DNS                   | Standard DNS queries                                    |

Common egress ports

Compute nodes require outbound network access to several hosted control planes services. The following table details the egress requirements for compute nodes.

| Port   | Protocol    | Service               | Purpose                                                                                                                     | When required                                               |
|--------|-------------|-----------------------|-----------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------|
| `443`  | TCP         | HTTPS                 | Container registries, `Ignition` or `Konnectivity` service via `Route` service publishing strategy, external HTTPS services | Always                                                      |
| `6443` | TCP         | Kubernetes API server | Cluster management and kubelet communication                                                                                | Always                                                      |
| `8091` | TCP         | Konnectivity server   | Establishes a reverse tunnel for control plane access                                                                       | `NodePort` or `LoadBalancer` publishing only                |
| `8443` | TCP         | Ignition Proxy        | Retrieves bootstrap configuration                                                                                           | `NodePort` publishing only for Agent platform or bare metal |
| `53`   | TCP and UDP | DNS                   | Name resolution                                                                                                             | Always                                                      |

Compute node egress requirements

## Example firewall configuration

Review an example of what the firewall configuration looks like for a typical hosted control planes on AWS deployment that uses `Route` service publishing.

Ingress rules
- Port `6443`/TCP: Kubernetes API server, from compute nodes and external clients

- Port `443`/TCP: OpenShift Router for Ignition or Konnectivity routes, from compute nodes

Egress rules
- Port `443`/TCP: HTTPS, to container registries, routes, and external services

- Port `6443`/TCP: Management cluster API, to management cluster

- Port `53`/TCP and UDP: DNS, to DNS servers

If you use `NodePort` or `LoadBalancer` service publishing instead of `Route` service publishing, the following rules apply:

- Port `8091`/TCP: Konnectivity server, from compute nodes

- Port `8443`/TCP: Ignition Proxy, from compute nodes during the bootstrap process, `NodePort` publishing strategy only

- Port `9090`/TCP: Ignition server, from compute nodes during the bootstrap process, `NodePort` publishing strategy only

## Handling ingress in a hosted cluster on bare metal

Every OpenShift Container Platform cluster has a default application Ingress Controller that typically has an external DNS record associated with it. For example, if you create a hosted cluster named `example` with the base domain `krnl.es`, you can expect the wildcard domain `*.apps.example.krnl.es` to be routable.

<div class="formalpara-title">

**Procedure**

</div>

To set up a load balancer and wildcard DNS record for the `*.apps` domain, perform the following actions on your guest cluster:

1.  Deploy MetalLB by creating a YAML file that contains the configuration for the MetalLB Operator:

    ``` yaml
    apiVersion: v1
    kind: Namespace
    metadata:
      name: metallb
      labels:
        openshift.io/cluster-monitoring: "true"
      annotations:
        workload.openshift.io/allowed: management
    ---
    apiVersion: operators.coreos.com/v1
    kind: OperatorGroup
    metadata:
      name: metallb-operator-operatorgroup
      namespace: metallb
    ---
    apiVersion: operators.coreos.com/v1alpha1
    kind: Subscription
    metadata:
      name: metallb-operator
      namespace: metallb
    spec:
      channel: "stable"
      name: metallb-operator
      source: redhat-operators
      sourceNamespace: openshift-marketplace
    ```

2.  Save the file as `metallb-operator-config.yaml`.

3.  Enter the following command to apply the configuration:

    ``` terminal
    $ oc apply -f metallb-operator-config.yaml
    ```

4.  After the Operator is running, create the MetalLB instance:

    1.  Create a YAML file that contains the configuration for the MetalLB instance:

        ``` yaml
        apiVersion: metallb.io/v1beta1
        kind: MetalLB
        metadata:
          name: metallb
          namespace: metallb
        ```

    2.  Save the file as `metallb-instance-config.yaml`.

    3.  Create the MetalLB instance by entering this command:

        ``` terminal
        $ oc apply -f metallb-instance-config.yaml
        ```

5.  Create an `IPAddressPool` resource with a single IP address. This IP address must be on the same subnet as the network that the cluster nodes use.

    1.  Create a file, such as `ipaddresspool.yaml`, with content like the following example:

        ``` yaml
        apiVersion: metallb.io/v1beta1
        kind: IPAddressPool
        metadata:
          namespace: metallb
          name: <ip_address_pool_name>
        spec:
          addresses:
            - <ingress_ip>-<ingress_ip>
          autoAssign: false
        ```

        - Specify the `IPAddressPool` resource name.

        - Specify the IP address for your environment. For example, `192.168.122.23`.

    2.  Apply the configuration for the IP address pool by entering the following command:

        ``` terminal
        $ oc apply -f ipaddresspool.yaml
        ```

6.  Create a L2 advertisement.

    1.  Create a file, such as `l2advertisement.yaml`, with content like the following example:

        ``` yaml
        apiVersion: metallb.io/v1beta1
        kind: L2Advertisement
        metadata:
          name: <l2_advertisement_name>
          namespace: metallb
        spec:
          ipAddressPools:
           - <ip_address_pool_name>
        ```

        - Specify the `L2Advertisement` resource name.

        - Specify the `IPAddressPool` resource name.

    2.  Apply the configuration by entering the following command:

        ``` terminal
        $ oc apply -f l2advertisement.yaml
        ```

7.  After creating a service of the `LoadBalancer` type, MetalLB adds an external IP address for the service.

    1.  Configure a new load balancer service that routes ingress traffic to the ingress deployment by creating a YAML file named `metallb-loadbalancer-service.yaml`:

        ``` yaml
        kind: Service
        apiVersion: v1
        metadata:
          annotations:
           metallb.io/address-pool: ingress-public-ip
          name: metallb-ingress
          namespace: openshift-ingress
        spec:
          ports:
            - name: http
              protocol: TCP
              port: 80
              targetPort: 80
            - name: https
              protocol: TCP
              port: 443
              targetPort: 443
          selector:
            ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
          type: LoadBalancer
        ```

    2.  Save the `metallb-loadbalancer-service.yaml` file.

    3.  Enter the following command to apply the YAML configuration:

        ``` terminal
        $ oc apply -f metallb-loadbalancer-service.yaml
        ```

    4.  Enter the following command to reach the OpenShift Container Platform console:

        ``` bash
        $ curl -kI https://console-openshift-console.apps.example.krnl.es
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        HTTP/1.1 200 OK
        ```

    5.  Check the `clusterversion` and `clusteroperator` values to verify that everything is running. Enter the following command:

        ``` terminal
        $ oc --kubeconfig <hosted_cluster_name>.kubeconfig get clusterversion,co
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        NAME                                         VERSION   AVAILABLE   PROGRESSING   SINCE   STATUS
        clusterversion.config.openshift.io/version   4.x.y      True        False        3m32s   Cluster version is 4.x.y

        NAME                                                                             VERSION   AVAILABLE   PROGRESSING   DEGRADED   SINCE   MESSAGE
        clusteroperator.config.openshift.io/console                                      4.x.y     True        False         False      3m50s
        clusteroperator.config.openshift.io/ingress                                      4.x.y     True        False         False      53m
        ```

        Replace `<4.x.y>` with the supported OpenShift Container Platform version that you want to use, for example, `4.20.0-multi`.

# Configuring internal OVN IPv4 subnets for hosted clusters

In hosted clusters, you can configure internal OVN subnets to avoid routing conflicts, customize network architecture, or enable virtual private cloud (VPC) peering.

Avoid CIDR conflicts
Connect VPCs that host Red Hat OpenShift Service on AWS clusters with other VPCs that use the default OVN internal subnets of 100.88.0.0/16 and 100.64.0.0/16. To avoid a conflict on a `kubevirt` hosted cluster, the HyperShift Operator sets the OVN join subnet to `100.66.0.0/16` instead of `100.64.0.0/16` or `100.65.0.0/16`. The default CIDR for the OVN gateway router is `100.64.0.0/16`. The default CIDR for the user-defined network (UDN) join subnet is `100.65.0.0/16`.

Customize network architecture
Configure internal OVN subnets to align with your corporate network policies.

Enable VPC peering
Deploy hosted clusters in environments where default subnets conflict with peered networks.

To configure OVN-internal subnets, you expose two OVN-Kubernetes internal subnet configuration options:

`internalJoinSubnet`
Internal subnet used by OVN-Kubernetes for the join network (default: `100.64.0.0/16`)

`internalTransitSwitchSubnet`
Internal subnet used for the distributed transit switch in OVN Interconnect architecture (default: `100.88.0.0/16`)

You can configure internal OVN subnets in an existing hosted cluster or configure the subnets while you create a hosted cluster.

- Your hosted cluster version must be OpenShift Container Platform 4.20 or later.

- For the network type, your hosted cluster must use `networkType: OVNKubernetes`.

- Custom subnets must not overlap with the following subnets:

  - Machine CIDRs

  - Service CIDRs

  - Cluster network CIDRs

  - Any other networks in your infrastructure

<!-- -->

- To configure internal OVN subnets while you create a hosted cluster, in the configuration file for the hosted cluster, include the following section:

  ``` yaml
  apiVersion: hypershift.openshift.io/v1beta1
  kind: HostedCluster
  metadata:
    name: <hosted_cluster_name>
    namespace: <hosted_control_plane_namespace>
  spec:
    networking:
      networkType: OVNKubernetes
      machineCIDR: 10.0.0.0/16
      serviceCIDR: 172.30.0.0/16
      clusterNetwork:
      - cidr: 10.128.0.0/14
    operatorConfiguration:
      clusterNetworkOperator:
        ovnKubernetesConfig:
          ipv4:
            internalJoinSubnet: "100.99.0.0/16"
            internalTransitSwitchSubnet: "100.69.0.0/16"
  ```

  where:

  `metadata`
  Specifies the name of the hosted cluster and the name of the hosted control plane namespace.

  `spec.operatorConfiguration.clusterNetworkOperator.ovnKubernetesConfig.ipv4`
  Specifies the subnets to use. Both subnet fields in this section must be in a valid IPv4 CIDR notation, such as `192.168.1.0/24`. The prefix range is `/0` to `/30`, inclusive. The first octet cannot be 0, and the string length must be 9-18 characters. The subnet fields cannot use the same value. The subnet must be large enough to accommodate one IP address per node in the cluster. When you plan subnet size, consider future cluster growth. If you omit these fields, the default value for the `internalJoinSubnet` field is `100.64.0.0/16`, and the default value for the `internalTransitSwitchSubnet` field is `100.88.0.0/16`.

  For full details about creating a hosted cluster, see "Creating a hosted cluster by using the CLI".

- To configure internal OVN subnets in an existing hosted cluster, enter the following command:

  <div class="important">

  When you make this change to an existing hosted cluster, the `ovnkube-node` DaemonSet is rolled out and the OVN components on compute nodes are restarted. During this process, you might experience brief network disruptions.

  </div>

  ``` terminal
  $ oc patch hostedcluster <hosted_cluster_name> \
    -n <hosted_control_plane_namespace> \
    --type=merge \
    -p '{
      "spec": {
        "operatorConfiguration": {
          "clusterNetworkOperator": {
            "ovnKubernetesConfig": {
              "ipv4": {
                "internalJoinSubnet": "100.99.0.0/16",
                "internalTransitSwitchSubnet": "100.69.0.0/16"
              }
            }
          }
        }
      }
    }'
  ```

  where:

  `metadata`
  Specifies the name of the hosted cluster and the name of the hosted control plane namespace.

  `spec.operatorConfiguration.clusterNetworkOperator.ovnKubernetesConfig.ipv4`
  Specifies the subnets to use. Both subnet fields in this section must be in a valid IPv4 CIDR notation, such as `192.168.1.0/24`. The prefix range is `/0` to `/30`, inclusive. The first octet cannot be 0, and the string length must be 9-18 characters. The subnet fields cannot use the same value. The subnet must be large enough to accommodate one IP address per node in the cluster. When you plan subnet size, consider future cluster growth. If you omit these fields, the default value for the `internalJoinSubnet` field is `100.64.0.0/16`, and the default value for the `internalTransitSwitchSubnet` field is `100.88.0.0/16`.

1.  Verify that the hosted configuration is correct by entering the following command:

    ``` terminal
    $ oc get hostedcluster <hosted_cluster_name> -n <hosted_control_plane_namespace> \
      -o jsonpath='{.spec.operatorConfiguration.clusterNetworkOperator.ovnKubernetesConfig}' | jq .
    ```

    <div class="formalpara-title">

    **Example output**

    </div>

    ``` terminal
    {
      "ipv4": {
        "internalJoinSubnet": "100.99.0.0/16",
        "internalTransitSwitchSubnet": "100.69.0.0/16"
      }
    }
    ```

2.  Check the Network Operator configuration in the hosted cluster:

    1.  Extract the hosted cluster kubeconfig file by entering the following command:

        ``` terminal
        $ oc extract secret/<hosted_cluster_name>-admin-kubeconfig \
          -n <hosted_control_plane_namespace> --to=- > <hosted_cluster_kubeconfig_file>
        ```

    2.  Verify the Network Operator configuration by entering the following command:

        ``` terminal
        $ oc get network.operator.openshift.io cluster \
          --kubeconfig=<hosted_cluster_kubeconfig_file> \
          -o jsonpath='{.spec.defaultNetwork.ovnKubernetesConfig.ipv4}' | jq .
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        {
          "internalJoinSubnet": "100.99.0.0/16",
          "internalTransitSwitchSubnet": "100.69.0.0/16"
        }
        ```

3.  Create 2 test pods by completing the following steps:

    1.  In node 1, create pod 1, as shown in the following example:

        ``` yaml
        kind: Pod
        apiVersion: v1
          metadata:
            name: "<pod_1>"
            namespace: "<hosted_control_plane_namespace>"
            labels:
              name: <pod_name>
          spec:
            securityContext:
              runAsNonRoot: true
              seccompProfile:
                type: RuntimeDefault
            containers:
            - image: "<image_url>"
              name: <pod_name>
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop: ["ALL"]
            nodeName: "${NODE1}"
        ```

    2.  In node 2, create pod 2, as shown in the following example:

        ``` yaml
        kind: Pod
        apiVersion: v1
          metadata:
            name: "<pod_2>"
            namespace: "<hosted_control_plane_namespace>"
            labels:
              name: <pod_name>
          spec:
            securityContext:
              runAsNonRoot: true
              seccompProfile:
                type: RuntimeDefault
            containers:
            - image: "<image_url>"
              name: <pod_name>
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop: ["ALL"]
            nodeName: "${NODE2}"
        ```

4.  Create a test service that backs up both pods, as shown in the following example:

    ``` yaml
    kind: Service
    apiVersion: v1
      metadata:
        name: "<test_service_name"
        namespace: "<hosted_control_plane_namespace>"
        labels:
          name: test-service
      spec:
        internalTrafficPolicy: "Cluster"
        externalTrafficPolicy: ""
        ipFamilyPolicy: "SingleStack"
        ports:
        - name: http
          port: <service_test_port_number>
          protocol: "TCP"
          targetPort: 8080
        selector:
          name: "<pod_name>"
        type: "ClusterIP"
    ```

5.  Verify that the OVN pods are running:

    1.  Enter the following command:

        ``` terminal
        $ oc rollout status daemonset/ovnkube-node \
          -n openshift-ovn-kubernetes \
          --kubeconfig=<hosted_cluster_kubeconfig_file> \
          --timeout=5m
        ```

    2.  Enter the following command:

        ``` terminal
        $ oc get pods -n openshift-ovn-kubernetes --kubeconfig=<hosted_cluster_kubeconfig_file>
        ```

        All `ovnkube-node` pods should be in `Running` state with all containers ready.

6.  Make sure that the changes synchronized to the Network Operator by entering the following command:

    ``` terminal
    $ oc get network.operator.openshift.io/cluster \
      -ojsonpath='{.spec.defaultNetwork.ovnKubernetesConfig.ipv4}' \
      --kubeconfig=<clusters-hostedclustername> | jq .
    ```

7.  Get the IP address of pod 2 and transfer it from pod 1:

    1.  Enter the following command:

        ``` terminal
        $ pod2_ip=oc get pod -n e2e-test-networking-ovnkubernetes-xxt8s <pod_2> -o=jsonpath={.status.podIPs[0].ip}
        ```

    2.  Enter the following command:

        ``` terminal
        $ oc exec <pod_1> -- /bin/sh -x -c curl --connect-timeout 5 -s <pod2_ip>:8080
        ```

8.  Get the service IP address and verify that the pod can be visited externally from a service:

    1.  Enter the following command:

        ``` terminal
        $ SERVICE_IP=oc get service test-service-o=jsonpath={.spec.clusterIPs[0]}
        ```

    2.  Enter the following command:

        ``` terminal
        $ oc exec <pod_1> -- /bin/sh -x -c curl --connect-timeout 5 -s $SERVICE_IP:<service_test_port_number>
        ```

- [Troubleshooting internal subnets for hosted clusters](../hosted_control_planes/hcp-troubleshooting.xml#hcp-ts-internal-subnets_hcp-troubleshooting)

- [Creating a hosted cluster by using the CLI](../hosted_control_planes/hcp-deploy/hcp-deploy-bm.xml#hcp-bm-hc_hcp-deploy-bm)

# Proxy support for hosted control planes

To ensure that control-plane workloads, compute nodes, management clusters, and hosted clusters have the access they need for optimal performance, you can configure proxy support.

In standalone OpenShift Container Platform, the primary purposes of proxy support are ensuring that workloads in the cluster are configured to use the HTTP or HTTPS proxy to access external services, honoring the `NO_PROXY` setting if one is configured, and accepting any trust bundle that is configured for the proxy.

In hosted control planes, proxy support includes use cases beyond those in standalone OpenShift Container Platform.

## Control plane workloads that need to access external services

Operators that run in the control plane need to access external services through the proxy that is configured for the hosted cluster. The proxy is usually accessible only through the data plane. The control plane workloads are as follows:

- The Control Plane Operator needs to validate and obtain endpoints from certain identity providers when it creates the OAuth server configuration.

- The OAuth server needs non-LDAP identity provider access.

- The OpenShift API server handles image registry metadata import.

- The Ingress Operator needs access to validate external canary routes.

- You must open the firewall port `53` on Transmission Control Protocol (TCP) and User Datagram Protocol (UDP) to allow the Domain Name Service (DNS) protocol to work as expected.

In a hosted cluster, you must send traffic that originates from the Control Plane Operator, Ingress Operator, OAuth server, and OpenShift API server pods through the data plane to the configured proxy and then to its final destination.

<div class="note">

Some operations are not possible when a hosted cluster is reduced to zero compute nodes; for example, when you import OpenShift image streams from a registry that requires proxy access.

</div>

## Compute nodes that need to access an ignition endpoint

When compute nodes need a proxy to access the ignition endpoint, you must configure the proxy in the user-data stub that is configured on the compute node when it is created. For cases where machines need a proxy to access the ignition URL, the proxy configuration is included in the stub.

The stub resembles the following example:

``` terminal
---
{"ignition":{"config":{"merge":[{"httpHeaders":[{"name":"Authorization","value":"Bearer ..."},{"name":"TargetConfigVersionHash","value":"a4c1b0dd"}],"source":"https://ignition.controlplanehost.example.com/ignition","verification":{}}],"replace":{"verification":{}}},"proxy":{"httpProxy":"http://proxy.example.org:3128", "httpsProxy":"https://proxy.example.org:3129", "noProxy":"host.example.org"},"security":{"tls":{"certificateAuthorities":[{"source":"...","verification":{}}]}},"timeouts":{},"version":"3.2.0"},"passwd":{},"storage":{},"systemd":{}}
---
```

## Compute nodes that need to access the API server

This use case is relevant to self-managed hosted control planes, not to Red Hat OpenShift Service on AWS with hosted control planes.

For communication with the control plane, hosted control planes uses a local proxy in every compute node that listens on IP address 172.20.0.1 and forwards traffic to the API server. If an external proxy is required to access the API server, that local proxy needs to use the external proxy to send traffic out. When a proxy is not needed, hosted control planes uses `haproxy` for the local proxy, which only forwards packets via TCP. When a proxy is needed, hosted control planes uses a custom proxy, `control-plane-operator-kubernetes-default-proxy`, to send traffic through the external proxy.

## Management clusters that need external access

The HyperShift Operator has a controller that monitors the OpenShift global proxy configuration of the management cluster and sets the proxy environment variables on its own deployment. Control plane deployments that need external access are configured with the proxy environment variables of the management cluster.

## Management cluster that uses a proxy and a hosted cluster with a secondary network and no default pod network

If a management cluster uses a proxy configuration and you are configuring a hosted cluster with a secondary network but are not attaching the default pod network, add the CIDR of the secondary network to the proxy configuration. Specifically, you need to add the CIDR of the secondary network to the `noProxy` section of the proxy configuration for the management cluster. Otherwise, the Kubernetes API server will route some API requests through the proxy. In the hosted cluster configuration, the CIDR of the secondary network is automatically added to the `noProxy` section.

- [Troubleshooting internal subnets for hosted clusters](../hosted_control_planes/hcp-troubleshooting.xml#hcp-ts-internal-subnets_hcp-troubleshooting)

- [Creating a hosted cluster by using the CLI](../hosted_control_planes/hcp-deploy/hcp-deploy-bm.xml#hcp-bm-hc_hcp-deploy-bm)

- [About the OVN-Kubernetes network plugin](../networking/ovn_kubernetes_network_provider/about-ovn-kubernetes.xml)

- [Configuring the cluster-wide proxy](../networking/configuring_network_settings/enable-cluster-wide-proxy.xml#enable-cluster-wide-proxy)
